github/ci/prow-deploy/kustom/environments/kubevirtci-testing/patches/StrategicMerge/greenhouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greenhouse
spec:
  template:
    spec:
      volumes:
        - name: cache
          hostPath:
            path: /var/lib/greenhouse/kubernetes-prow
