github/ci/prow-deploy/kustom/environments/kubevirtci-testing/patches/StrategicMerge/ingress-nginx-controller.yaml
# Force ingress controller to run on a specific node
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
spec:
  template:
    spec:
      nodeSelector:
        role: ingress-controller
